<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF">



    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:background="@drawable/headerjogging" />

    <ScrollView
        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp">


        <LinearLayout
            android:id="@+id/grubbt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:alpha=".80"
                android:text="Jogging"
                android:textColor="#000000"
                android:textSize="20dp"
                android:fontFamily="@font/bahnschrift"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="100dp">

                <com.uncopt.android.widget.text.justify.JustifiedTextView
                    android:id="@+id/swimmingpenjelasan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:paddingBottom="10dp"
                    android:text="@string/joggingpenjelasan" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/jogginglangkah"
                        android:paddingBottom="5dp"
                        android:textColor="@android:color/black"
                        android:paddingTop="10dp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/jogginglangkah1"
                        android:paddingBottom="5dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/jogginglangkah2"
                        android:paddingBottom="5dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/jogginglangkah3"
                        android:paddingBottom="5dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/jogginglangkah4"
                        android:paddingBottom="5dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/jogginglangkah5"
                        android:paddingBottom="5dp"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </ScrollView>
</RelativeLayout>

